# hexlet_pytest

./: .gitignore  pyproject.toml
hexlet_pytest/: example.py
tests/: test_reverse_with_data.py  test_stack.py
tests/test_data/: expected.txt  expected.txt.save  input.txt
